--- a/src/app/form/truc/truc.component.html
+++ b/src/app/form/truc/truc.component.html
@@ -1,5 +1,5 @@
-<app-form-frame [frameModel]="frameModel" [formData]="addressForm">
-  <form [formGroup]="addressForm" novalidate (ngSubmit)="onSubmit()">
+<app-form-frame [frameModel]="frameModel" [formData]="formData">
+  <form [formGroup]="formData" novalidate>
     <mat-card class="shipping-card">
       <mat-card-header>
         <mat-card-title>Shipping Information</mat-card-title>
@@ -16,7 +16,7 @@
           <div class="col">
             <mat-form-field class="full-width">
               <input matInput placeholder="First name" formControlName="firstName">
-              @if (addressForm.controls['firstName'].hasError('required')) {
+              @if (formData.controls['firstName'].hasError('required')) {
                 <mat-error>First name is <strong>required</strong></mat-error>
               }
             </mat-form-field>
@@ -24,7 +24,7 @@
           <div class="col">
             <mat-form-field class="full-width">
               <input matInput placeholder="Last name" formControlName="lastName">
-              @if (addressForm.controls['lastName'].hasError('required')) {
+              @if (formData.controls['lastName'].hasError('required')) {
                 <mat-error>Last name is <strong>required</strong></mat-error>
               }
             </mat-form-field>
@@ -34,7 +34,7 @@
           <div class="col">
             <mat-form-field class="full-width">
               <textarea matInput placeholder="Address" formControlName="address"></textarea>
-              @if (addressForm.controls['address'].hasError('required')) {
+              @if (formData.controls['address'].hasError('required')) {
                 <mat-error>Address is <strong>required</strong></mat-error>
               }
             </mat-form-field>
@@ -57,7 +57,7 @@
           <div class="col">
             <mat-form-field class="full-width">
               <input matInput placeholder="City" formControlName="city">
-              @if (addressForm.controls['city'].hasError('required')) {
+              @if (formData.controls['city'].hasError('required')) {
                 <mat-error>City is <strong>required</strong></mat-error>
               }
             </mat-form-field>
@@ -69,7 +69,7 @@
                   <mat-option [value]="state.abbreviation">{{ state.name }}</mat-option>
                 }
               </mat-select>
-              @if (addressForm.controls['state'].hasError('required')) {
+              @if (formData.controls['state'].hasError('required')) {
                 <mat-error>State is <strong>required</strong></mat-error>
               }
             </mat-form-field>
@@ -98,5 +98,5 @@
       </mat-card-actions> -->
     </mat-card>
   </form>
-  <p>status: {{addressForm.status}}, dirty : {{addressForm.dirty}}</p>
+  <p>status: {{formData.status}}, dirty : {{formData.dirty}}</p>
 </app-form-frame>
