--- a/src/app/form/truc/truc.component.html
+++ b/src/app/form/truc/truc.component.html
@@ -98,5 +98,5 @@
       </mat-card-actions> -->
     </mat-card>
   </form>
-  <p>status: {{formData.status}}, dirty : {{formData.dirty}}</p>
+  <p>status: {{formData.status}}, dirty : {{formData.dirty}}, id : {{formData.get('id')?.value}}</p>
 </app-form-frame>
