--- a/src/app/common/component/form-frame/form-frame.component.html
+++ b/src/app/common/component/form-frame/form-frame.component.html
@@ -3,7 +3,7 @@
     <ng-container *ngTemplateOutlet="saveButtons"/>
 </div>
 <h4 *ngIf="frameModel?.name != undefined">{{frameModel.name}}</h4>
-<div class="buttonsContainer" *ngIf="frameModel.actions.size > 0">
+<div class="buttonsContainer" *ngIf="frameModel?.actions?.size ?? 0 > 0">
     @for(action of frameModel.actions.values(); track action){
         <button 
             *ngIf="action.isVisible && action.action != undefined"
