--- a/src/app/common/component/form-frame/form-frame.component.html
+++ b/src/app/common/component/form-frame/form-frame.component.html
@@ -1,14 +1,18 @@
+@if(isLoading || frameModel === undefined) {
+    <mat-spinner/>
+}
+@else {
 <div class="titleContainer">
-    <h3 *ngIf="frameModel?.title != undefined">{{frameModel.title}}</h3>
+    <h3 *ngIf="frameModel?.title != undefined">{{frameModel!.title}}</h3>
     <ng-container *ngTemplateOutlet="saveButtons"/>
 </div>
-<h4 *ngIf="frameModel?.name != undefined">{{frameModel.name}}</h4>
+<h4 *ngIf="frameModel!.name !== undefined">{{frameModel!.name}}</h4>
 <div class="buttonsContainer" *ngIf="frameModel?.actions?.size ?? 0 > 0">
-    @for(action of frameModel.actions.values(); track action){
+    @for(action of frameModel!.actions.values(); track action){
         <button 
-            *ngIf="action.isVisible && action.action != undefined"
+            *ngIf="action.isVisible"
             mat-stroked-button 
-            (click)="action.subject!.next(undefined)"
+            (click)="action.subject.next(true)"
             [disabled]="!action.isAvailable || action.inLoading"
             [attr.style]="'order: ' + action.order">
                 <mat-icon *ngIf="action.icon && !action.inLoading">{{ action.icon }}</mat-icon>
@@ -19,7 +23,7 @@
 </div>
 <ng-content/>
 <ng-container *ngTemplateOutlet="saveButtons"/>
-
+  }
 <!-- template de bouton save utilisé en header & footer. -->
 <ng-template #saveButtons>
     <p class="buttonSaveContainer">
@@ -28,25 +32,25 @@
             <mat-icon><mat-spinner diameter="20"/></mat-icon>
         </ng-container> -->
         <button 
-            *ngIf="frameModel.saveButton?.isVisible ?? false"
-            (click)="frameModel.saveButton?.subject?.next(undefined)"
-            [disabled]="!frameModel.saveButton?.isAvailable || frameModel.saveButton?.inLoading || frameModel.saveCloseButton?.inLoading || formData.invalid || formData.pristine"
+            *ngIf="frameModel!.saveButton?.isVisible ?? false"
+            (click)="frameModel!.saveButton!.subject.next(true)"
+            [disabled]="!frameModel!.saveButton?.isAvailable || frameModel!.saveButton?.inLoading || frameModel!.saveCloseButton?.inLoading || formData!.invalid || formData!.pristine"
             mat-fab extended>
             <!-- mat-raised-button -->
-                <ng-container *ngIf="frameModel.saveButton?.inLoading" [ngTemplateOutlet]="spinnerButton"/>
+                <ng-container *ngIf="frameModel?.saveButton?.inLoading" [ngTemplateOutlet]="spinnerButton"/>
                 Save
             </button>
         <button 
-            *ngIf="frameModel.saveCloseButton?.isVisible ?? false"
-            (click)="frameModel.saveCloseButton?.subject?.next(undefined)"
-            [disabled]="!frameModel.saveCloseButton?.isAvailable || frameModel.saveButton?.inLoading || frameModel.saveCloseButton?.inLoading || formData.invalid || formData.pristine"
+            *ngIf="frameModel!.saveCloseButton?.isVisible ?? false"
+            (click)="frameModel!.saveCloseButton!.subject.next(true)"
+            [disabled]="!frameModel!.saveCloseButton?.isAvailable || frameModel?.saveButton?.inLoading || frameModel?.saveCloseButton?.inLoading || formData!.invalid || formData!.pristine"
             mat-fab extended>
-            <ng-container *ngIf="frameModel.saveCloseButton?.inLoading" [ngTemplateOutlet]="spinnerButton"/>
+            <ng-container *ngIf="frameModel!.saveCloseButton?.inLoading" [ngTemplateOutlet]="spinnerButton"/>
             Save & close
         </button>
         <button 
-            (click)="frameModel.closeButton.subject!.next(undefined)"
-            [disabled]="!frameModel.closeButton.isAvailable || frameModel.saveButton?.inLoading || frameModel.saveCloseButton?.inLoading"
+            (click)="frameModel!.closeButton.subject.next(true)"
+            [disabled]="!frameModel!.closeButton.isAvailable || frameModel!.saveButton?.inLoading || frameModel!.saveCloseButton?.inLoading"
             mat-raised-button>close</button>
     </p>
 </ng-template>
