--- a/src/app/test1/test1.component.html
+++ b/src/app/test1/test1.component.html
@@ -6,178 +6,181 @@
 <button mat-button (click)="testDialog4()">Yes/No test4</button><br/>
 <button mat-button (click)="testDialog5()">Yes/No test5</button><br/>
 <p>résultat du dialog : {{resultDialog}} </p>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
+@if (TestAscenceur) {
+
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+    s<br>
+}
