<pre> et autre corrections

--- a/src/app/form/test-select/test-select.component.html
+++ b/src/app/form/test-select/test-select.component.html
@@ -106,7 +106,7 @@
             {{this.stateComplexOptionsObservable$ | async | json }}
             <br/> -->
             <br/>
-            {{this.stateComplexBuffer | json}}
+            <pre>{{this.stateComplexBuffer | json}}</pre>
         </div>
     </div>
 </form>
