--- a/src/app/tables/table-filter-v1/table-filter-v1.component.html
+++ b/src/app/tables/table-filter-v1/table-filter-v1.component.html
@@ -39,7 +39,7 @@
         formulaire de filtre : 
     </div>
     <div>
-        {{this.fgFilter.value | json }}
+        <pre>{{this.fgFilter.value | json }}</pre>
     </div>
 </div>
 
