--- a/src/app/tables/comme-order-line/comme-order-line.component.html
+++ b/src/app/tables/comme-order-line/comme-order-line.component.html
@@ -149,7 +149,7 @@
             formulaire de filtre : 
         </div>
         <div>
-            {{this.fgFilter.value | json }}
+            <pre>{{this.fgFilter.value | json }}</pre>
         </div>
     </div>
 </div>
